Reworked colour picker in its entirety:  - color-mixer.scss now also generates code for sitewide colour changes. No more yucky inline css generation.  - Added in a default so nhs blue is pulled in but not forced when site colour changed (previously the individual pages had a default of blue and it was a pain to go change each individually. No more.  - Modified hover colours when a different colour to default is chosen so you dont revert to blue unwittingly  - modified search popup on mobile so it displays nicer.  - Added tighter selectors to colour specific settings to avoid bleeding into unwanted territory

--- a/assets/scss/color-mixer.scss
+++ b/assets/scss/color-mixer.scss
@@ -1,58 +1,148 @@
+@each $name, $colour in $page-colours {
+
+  .page-colour--#{$name} {
+	.nhsuk-header, .nhsuk-header--white .nhsuk-search__submit, .nhsuk-header__navigation, #secondary section h2.widget-title, .nhsuk-panel-with-label__label, #secondary section #wp-calendar caption {
+	  background-color : $colour;
+	  background       : $colour;
+	}
+
+	a {
+	  color : $colour;
+	}
+
+	.nhsuk-header__navigation-link:hover, .nhsuk-header .nhsuk-header__navigation ul li a:hover {
+	  background-color : $colour;
+	  background       : $colour;
+	  filter           : brightness(85%);
+	}
+
+	.nhsuk-footer,
+	#secondary section {
+	  border-top-color : $colour;
+	}
+
+	@media (max-width : 40.0525em) {
+	  .nhsuk-header__navigation {
+		background       : #ffffff;
+		background-color : #ffffff;
+	  }
+	  .nhsuk-header .nhsuk-header__navigation ul li a, .nhsuk-header__navigation-link {
+		color : #0b0c0c;
+	  }
+	  .nhsuk-header__menu-toggle:focus, .nhsuk-header__menu-toggle.is-active, .nhsuk-header__menu-toggle:active, .nhsuk-header .nhsuk-header__search-toggle:hover, .nhsuk-header .nhsuk-header__search-toggle:focus, .nhsuk-header__search-toggle.is-active, .nhsuk-header__search-toggle:active {
+		background-color : $colour;
+		background       : $colour;
+		filter           : brightness(85%);
+		color            : #ffffff;
+	  }
+	  .nhsuk-header .nhsuk-icon__search {
+		fill: #ffffff;
+	  }
+	}
+	#secondary section h2.widget-title,
+	.nhsuk-panel-with-label__label,
+	#secondary section #wp-calendar caption,
+	.nhsuk-do-dont-list__label,
+	.nhsuk-care-card .nhsuk-care-card__heading-container,
+	.nhsuk-hero--image-description .nhsuk-hero-content {
+
+	  background-color : $colour;
+	  background       : $colour;
+	  color            : $color_nhsuk-white;
+
+	}
+
+	.nhsuk-details__summary,
+	.nhsuk-details__summary-text,
+	.nhsuk-promo__heading,
+	a {
+	  color : $colour;
+	}
+
+	a.nhsuk-button {
+	  color : $color_nhsuk-white;
+	}
+
+	a.nhsuk-button.is-style-reverse {
+	  color : $color_nhsuk-black;
+	}
+
+	.nhsuk-inset-text,
+	.nhsuk-care-card__arrow:before,
+	.nhsuk-care-card__arrow:after,
+	.nhsuk-hero--image-description .nhsuk-hero-content .nhsuk-hero__arrow:before,
+	.nhsuk-hero--image-description .nhsuk-hero-content .nhsuk-hero__arrow:after,
+	#secondary section {
+	  border-color : $colour;
+	}
+
+	.nhsuk-icon__search,
+	.navigation .nhsuk-pagination ul.nhsuk-pagination__list li.nhsuk-pagination-item--next a .nhsuk-icon,
+	.navigation .nhsuk-pagination ul.nhsuk-pagination__list li.nhsuk-pagination-item--previous a .nhsuk-icon,
+	.nhsuk-pagination__link .nhsuk-icon  {
+	  fill : $colour;
+	}
+	#secondary section ul>li>ul>li>a {
+	  border-left: 2px solid $colour;
+	}
+  }
+}
 
 @each $name, $colour in $colours {
 
   .has-#{$name}-color {
-    color: $colour;
+	color : $colour;
   }
 
   .has-#{$name}-background-color {
-    background-color: $colour;
+	background-color : $colour;
   }
 }
 
 @each $name, $colour in $page-colours {
 
-	.page-style--#{$name}{
+  .page-style--#{$name} {
 
-		#secondary section h2.widget-title, 
-		.nhsuk-panel-with-label__label, 
-		#secondary section #wp-calendar caption,
-		.nhsuk-do-dont-list__label,
-		.nhsuk-care-card .nhsuk-care-card__heading-container,
-		.nhsuk-hero--image-description .nhsuk-hero-content {
+	#secondary section h2.widget-title,
+	.nhsuk-panel-with-label__label,
+	#secondary section #wp-calendar caption,
+	.nhsuk-do-dont-list__label,
+	.nhsuk-care-card .nhsuk-care-card__heading-container,
+	.nhsuk-hero--image-description .nhsuk-hero-content {
 
-			background-color: $colour;
-			background: $colour;
-			color: $color_nhsuk-white;
+	  background-color : $colour;
+	  background       : $colour;
+	  color            : $color_nhsuk-white;
 
-		}
-
-		.nhsuk-details__summary,
-		.nhsuk-details__summary-text,
-		.nhsuk-promo__heading,
-		a{
-			color: $colour;
-		}
-
-		a.nhsuk-button{
-			color: $color_nhsuk-white;
-		}
-		a.nhsuk-button.is-style-reverse{
-			color: $color_nhsuk-black;
-		}
-
-		.nhsuk-inset-text,
-		.nhsuk-care-card__arrow:before,
-		.nhsuk-care-card__arrow:after,
-		.nhsuk-hero--image-description .nhsuk-hero-content .nhsuk-hero__arrow:before, 
-		.nhsuk-hero--image-description .nhsuk-hero-content .nhsuk-hero__arrow:after,
-		#secondary section{
-			border-color: $colour;
-		}
-
-		.nhsuk-icon__search{
-			fill: $colour;
-		}
 	}
+
+	.nhsuk-details__summary,
+	.nhsuk-details__summary-text,
+	.nhsuk-promo__heading,
+	a {
+	  color : $colour;
+	}
+
+	a.nhsuk-button {
+	  color : $color_nhsuk-white;
+	}
+
+	a.nhsuk-button.is-style-reverse {
+	  color : $color_nhsuk-black;
+	}
+
+	.nhsuk-inset-text,
+	.nhsuk-care-card__arrow:before,
+	.nhsuk-care-card__arrow:after,
+	.nhsuk-hero--image-description .nhsuk-hero-content .nhsuk-hero__arrow:before,
+	.nhsuk-hero--image-description .nhsuk-hero-content .nhsuk-hero__arrow:after,
+	#secondary section {
+	  border-color : $colour;
+	}
+
+	.nhsuk-icon__search {
+	  fill : $colour;
+	}
+  }
 
 }
